--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 /* Root */
 :root {
     /* colors */
-    --bg_color: #ede7e3;
-    --tab_color: #adbbd9;
-    --shadow_color: #16697a; 
-    --outline_color: #489fb5;
+    --bg_color: #eff9ff;
+    --tab_color: #9ff4f5;
+    --shadow_color: #163e7a; 
+    --outline_color: #92ccda;
     --hover_color: #82c0cc; 
     --title_text_color: #0f142d; 
     --body_text_color: #3f4159; 
