--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,9 @@
 :root {
     /* colors */
     --bg_color: #eff9ff;
-    --tab_color: #9ff4f5;
+    --tab_color: #9fd0f5;
     --shadow_color: #163e7a; 
-    --outline_color: #92ccda;
+    --outline_color: #238ea8;
     --hover_color: #82c0cc; 
     --title_text_color: #0f142d; 
     --body_text_color: #3f4159; 
